src/objects/Opportunity_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>APC__c</fullName>
        <label>APC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Subtype__c</fullName>
        <label>Account Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Owned Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Preferred Supplier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verticle Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goverment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Business Unit of the Product -- Used for separating Companion Product and Handset products</inlineHelpText>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_Account__c</fullName>
        <formula>TEXT(Account__r.Country__c)</formula>
        <label>Country (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_Segment__c</fullName>
        <label>DP Segment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category_Changed__c</fullName>
        <formula>IF(TEXT(Forecast_Category__c) = TEXT(Prev_Forecast_Category__c), False, True)</formula>
        <label>Forecast Category Changed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Category_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast Category Overridden?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Date__c</fullName>
        <label>Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_in_R_O__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables GTM/Finance to identify sales forecast opportunities as potential risk (downside) or opportunity (upside) to include/exclude from reporting.</description>
        <label>Include in R &amp; O</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Price__c</fullName>
        <label>Invoice Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsLineItem__c</fullName>
        <formula>NOT(ISBLANK(Opportunity_Line_Number__c))</formula>
        <label>IsLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Account__c</fullName>
        <formula>Account__r.Key_Account__r.Name</formula>
        <label>Key Account (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <label>Key Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCV_Price__c</fullName>
        <label>LCV Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <inlineHelpText>The custom description entered on the opportunity line.</inlineHelpText>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Number__c</fullName>
        <label>Opportunity Line #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Quarter__c</fullName>
        <description>Year-Quarter</description>
        <formula>TEXT(Year__c) &amp; &apos;-&apos; &amp; TEXT(Quarter__c)</formula>
        <label>Opportunity Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Segment__c</fullName>
        <label>Portfolio Segment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Forecast_Category__c</fullName>
        <label>Prev. Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prev_Product_Forecast_Category__c</fullName>
        <label>Prev. Product Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prev_Quantity__c</fullName>
        <description>Previous week quantity</description>
        <label>Prev. Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Stage__c</fullName>
        <description>Previous Week Stage</description>
        <label>Prev. Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1. Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Presenting Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Proposal Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Commercial Proposal Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Active Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Finalizing Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prev_Week_Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Week Snapshot</label>
        <referenceTo>Opportunity_Snapshot__c</referenceTo>
        <relationshipLabel>Opportunity Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <inlineHelpText>Opportunity Probability</inlineHelpText>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>DVX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iDEN Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Market Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MobileVoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multimedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable Bluetooth &amp; Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAZR Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Droid Category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Forecast_Category_Changed__c</fullName>
        <formula>IF(TEXT(Product_Forecast_Category__c) = TEXT(Prev_Product_Forecast_Category__c), False, True)</formula>
        <label>Product Forecast Category Changed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Forecast_Category__c</fullName>
        <inlineHelpText>Forecast category at the product level</inlineHelpText>
        <label>Product Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity Product lookup</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>Product&apos;s Program</inlineHelpText>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <inlineHelpText>Product&apos;s project</inlineHelpText>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Delta__c</fullName>
        <formula>NULLVALUE(Quantity__c, 0) - NULLVALUE(Prev_Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Current_Forecast_Category__c</fullName>
        <label>Reason for Current Forecast Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Account__c</fullName>
        <formula>TEXT(Account__r.Region__c)</formula>
        <label>Region (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Changed__c</fullName>
        <formula>IF(TEXT(Stage__c) = TEXT(Prev_Stage__c), False, True)</formula>
        <label>Stage Changed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1. Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Presenting Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Proposal Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Commercial Proposal Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Active Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Finalizing Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Region_Account__c</fullName>
        <formula>TEXT(Account__r.Sub_Region__c)</formula>
        <label>Sub Region (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <formula>Case(
MOD( DATE(YEAR(Snapshot_Date__c), 1, 1) - DATE (1900, 1, 7), 7),
0, ( Snapshot_Date__c- DATE(YEAR(Snapshot_Date__c),1,1) + 3) /7, 
1, ( Snapshot_Date__c- DATE(YEAR(Snapshot_Date__c),1,1) + 4) /7, 
2, ( Snapshot_Date__c- DATE(YEAR(Snapshot_Date__c),1,1) + 5) /7, 
3, ( Snapshot_Date__c- DATE(YEAR(Snapshot_Date__c),1,1) + 6) /7, 
4, ( Snapshot_Date__c- DATE(YEAR(Snapshot_Date__c),1,1) + 7) /7, 
5, ( Snapshot_Date__c- DATE(YEAR(Snapshot_Date__c),1,1) + 1) /7, 
6, ( Snapshot_Date__c- DATE(YEAR(Snapshot_Date__c),1,1) + 2) /7, 
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <description>Prefixes &quot;W&quot; to the week number</description>
        <formula>&apos;W&apos; + TEXT(ROUND(Week_Number__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WoW_Flag__c</fullName>
        <defaultValue>&quot;Unchanged&quot;</defaultValue>
        <description>Unchanged / Changed / New / Deleted</description>
        <externalId>true</externalId>
        <label>WoW Flag</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>Opportunity belongs to this Year</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Close_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Prev_Quantity__c</columns>
        <columns>Quantity__c</columns>
        <columns>Quantity_Delta__c</columns>
        <columns>Week__c</columns>
        <columns>Week_Number__c</columns>
        <columns>WoW_Flag__c</columns>
        <columns>Year__c</columns>
        <columns>Snapshot_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OS-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>